style.css
/* :root font-size = 10px, body font-size = 16px */
/* Finish HTML, then CSS, then responsiveness */

:root {
    font-size: 62.5%;
}

html {
    height: 100%;
}

body {
    font-size: 1.6rem;
    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
    height: 100vh;
}


/* HEADER STYLES */

.header {
    display: flex;
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    background-color: #1F2937;
    box-sizing: border-box;
    height: 7.5rem;
    width: 100%;
    padding: 1rem 5rem;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
    color: #F9FAF8;
    font-size: 1.8rem;

    /* TODO add TailwindCSS class so that navbar content doesn't
    stretch above 1000px */

}

.header a {
    height: 100%;
    padding: 1rem 0;
    display: flex;
    align-items: center;
    font-weight: normal;
    text-decoration: none;

}

.header a:hover, a:visited {
    color: inherit;
    text-decoration: inherit;
}

.logo {
    padding: 0;
}

#logo_text {
    display: inline;
    margin-right: auto;
    font-size: 4.8rem;
    letter-spacing: -0.5rem;
}

#glutaLogo {
    width: auto;
    height: 100%;
    max-width: 100%;
    min-width: 4rem;
    align-self: flex-start;
    /* bold, align self, img size */
}

/* ABOUT SECTION STYLES */

section {
    max-width: 1000px;
    /* TODO add TailwindCSS or media query */
}

.about {
    display: flex;
    flex-direction: row;
    gap: 3rem;
    width: 100%;
    min-height: calc(7.5rem * 6);
    /* position: ; */
    box-sizing: border-box;
    padding: 7rem 4.5rem;
    background-color: #222d3d;
}

.about_text {
    display: flex;
    flex-direction: column;
}

.about_text h1 {
    font-size: 4.8rem;
    font-weight: 1000;
    color: #F9FAF8;
}

.about_text p {
    font-size: 1.8rem;
    font-weight: normal;
    color: #E5E7EB;
}

#about_sign_up {
    background-color: #3882F6;
    border-radius: 1rem;
    width: fit-content;
    height: fit-content;
    padding: 0.7rem 1.6rem;
}

#main_section_glutas {
    width: 100%;
    height: auto;
    max-width: 100%;
    max-height: 100%;
    min-width: 24rem;
    border-radius: 2rem;
}

/* MAIN CONTENT STYLES */

.main_content {
    display: flex;
    flex-direction: column;
    gap: 3rem;
    width: 100%;
    min-height: calc(7.5rem * 12);
    /* position: ; */
    box-sizing: border-box;
    padding: 7rem 4.5rem;
}

.history {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 4rem;
}

.history_images {
    display: flex;
    flex-direction: row;
    gap: 2rem;

}

.history_images_pairs {
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
    align-items: center;
    text-align: center;
    max-width: min-content;

}

.history_images img {
    width: 10rem;
    height: 10rem;
    max-width: 100%;
    max-height: 100%;
    min-width: 5rem;
    border: 0.5rem solid #3882F6;
    border-radius: 1rem;
    align-self: flex-start;
}

.history_images p {
    margin: auto 0;
}

